# CMakeAutoGen

./: .travis.yml  CMakeAutoGen.cmake  CMakeAutoGenScript.cmake  CMakeLists.txt  README.md
CMakeModules/: CMakeAutoGen.cmake  CMakeAutoGenScript.cmake  CMakeDiffScript.cmake
python/: autogen.py
test/: CMakeLists.txt  case_suffix.def  case_suffix.out1.ref  case_suffix.out2.ref  case_suffix.tpl  header_source.c.ref  header_source.def  header_source.h.ref  header_source.tpl  linenumber.def  linenumber.out.ref  linenumber.tpl  math.def  math.out.ref  math.tpl  quotes.def  quotes.out.ref  quotes.tpl  simple.def  simple.out.ref  simple.tpl
